--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="GuessApp">
+<html ng-app="guessApp">
     <head>
         <meta charset="utf-8">
         <title>AngularJS Guess number</title>
@@ -13,15 +13,17 @@
         </header>
 
         <div class="container" ng-controller="MainCtrl">
-            <form class="" action="index.html" >
-
-              <input type="number" name="" ng-model='inputUser' placeholder="Enter your number here"></input>
-              <button type="submit" name="button" ng-submit='submit'>ENTER</button>
+            <form ng-submit="submit(inputUser);">
+              <input type="number" name="" ng-model='inputUser' placeholder="Enter your number here" ng-disabled="disabledInput"></input>
+              <button type="submit" name="button">ENTER</button>
             </form>
+            <p class="tries">You have {{tries}} tries left...</p>
+            <p class="indicator">{{indicator}}</p>
+
         </div>
 
       <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.js"></script>
-        <script src="js/app.js"></script>
+      <script src="js/app.js"></script>
 
     </body>
 </html>
